--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -52,3 +52,27 @@ jobs:
           docker rm --force partida-aula
           docker run  -e MONGO_PASSWORD=${{ secrets.MONGO_PASSWORD }} -d -p 8080:8080 --name partida-aula ezambomsantana/partida-06-ci:${{ github.sha }}
           
+    - name: Generate JaCoCo Badge
+      id: jacoco
+      uses: cicirello/jacoco-badge-generator@v2
+      with:
+          jacoco-csv-file: target/test-results/jacoco/jacoco.csv
+          generate-branches-badge: true
+    
+    - name: Log coverage percentage
+      run: |
+        echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
+        echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
+    
+    - name: Commit and push the badge (if it changed)
+      uses: EndBug/add-and-commit@v7
+      with:
+          default_author: github_actions
+          message: 'commit badge'
+          add: '*.svg'
+    
+    - name: Upload JaCoCo coverage report
+      uses: actions/upload-artifact@v2
+      with:
+          name: jacoco-report
+          path: target/site/jacoco/
